# dgswemv2

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE.md  MAPTest.mw  README.md  circle.yml  dgswemv2_input.15  dgswemv2_input_parallelized.15  format_code.sh  format_code.sh~  makefile  rectangular_mesh  rectangular_mesh_spherical  run-clang-tidy.py
examples/ehdg_gn_analytical_solution/: CMakeLists.txt  analytical_gn_initial_condition_functions.hpp  analytical_gn_source_functions.hpp  analytical_gn_true_solution_functions.hpp  analytical_main_gn.cpp  analytical_ompi_main_gn.cpp  manufactured_swe_initial_condition_functions.hpp
examples/ehdg_swe_manufactured_solution/: CMakeLists.txt  manufactured_hpx_main_swe.cpp  manufactured_main_swe.cpp  manufactured_ompi_main_swe.cpp  manufactured_swe_initial_condition_functions.hpp  manufactured_swe_true_solution_functions.hpp
examples/ihdg_swe_manufactured_solution/: CMakeLists.txt  manufactured_main_swe.cpp  manufactured_ompi_main_swe.cpp  manufactured_swe_source_functions.hpp
examples/rkdg_swe_manufactured_solution/: CMakeLists.txt  manufactured_hpx_main_swe.cpp  manufactured_main_swe.cpp  manufactured_ompi_main_swe.cpp  manufactured_swe_initial_condition_functions.hpp  manufactured_swe_source_functions.hpp  manufactured_swe_true_solution_functions.hpp
merge/source/:  SWE_2D_LINEAR  .nfs000000014372780f0000068e  CMakeLists.txt  SWE_2D_LINEAR  a.14  boundary.hpp  class_basis_geometry.cpp  class_basis_geometry.h  class_boundary.h  class_boundary.hpp  class_element.cpp  class_element.h  class_element.hpp  class_element.tpp  class_interface.h  class_master_element.h  class_master_element.tpp  class_mesh.cpp  class_mesh.h  class_mesh.hpp  element.hpp  general_definitions.h  general_definitions.hpp  initialize_data.hpp  initialize_mesh.hpp  master_tri.cpp  master_tri.tpp  mesh.hpp  mesh_definitions.hpp  mesh_metadata.cpp  mesh_metadata.hpp  run_simulation.hpp  stepper.cpp  stepper.hpp
mesh_generators/: CMakeLists.txt  bathymetry.hpp  quad_mesh_generator.cpp  rectangular_mesh_generator.cpp
partitioner/: CMakeLists.txt  csrmat.hpp  numa_configuration.hpp  partition.cpp  partition2.hpp  partition_type.cpp  partition_type.hpp  partitioner.cpp  problem_partitioner_inputs.hpp  refine_strict.cpp  steal_queue.hpp  util.hpp  write_distributed_interfaces.cpp
partitioner/dg_problem/: default_partitioner_inputs.cpp  swe_partitioner_inputs.cpp  swe_partitioner_inputs.hpp
partitioner/problem/: default_partitioner_inputs.cpp  default_partitioner_inputs.hpp  swe_partitioner_inputs.cpp  swe_partitioner_inputs.hpp
source/: #CMakeLists.txt#  CMakeLists.txt  DG_HYPER_HEADER.h  basis.cpp  basis.h  boundary_types.hpp  class_basis.cpp  class_basis.h  class_basis_geometry.cpp  class_basis_geometry.h  class_edge.h  class_element.cpp  class_element.h  class_element_tri.cpp  class_element_tri.h  class_integration.cpp  class_integration.h  class_interface.cpp  class_interface.h  class_mesh.cpp  class_mesh.h  class_mesh_v2.cpp  class_mesh_v2.h  class_problem.h  dg_hyper.cpp  dgswemv2-hpx.cpp  dgswemv2-ompi.cpp  dgswemv2-serial.cpp  edge_types.hpp  general_definitions.h  general_definitions.hpp  hpx_run_simulation.hpp  initialize_data.hpp  initialize_mesh.hpp  integration.cpp  integration.h  mesh_metadata.cpp  mesh_metadata.hpp  namespace_swe.h  run_simulation.hpp  (+2 more)
source/ADCIRC_reader/: adcirc_format.cpp  adcirc_format.hpp
source/Basis functions/: basis_functions.h  basis_triangle_dubiner.cpp
source/Integration rules/: integration_area_dunavant.cpp  integration_line_gausslegendre.cpp  integration_rules_line.h
source/basis/: bases_1D.hpp  bases_2D.hpp  basis_polynomials.hpp
source/basis_functions/: basis_dubiner_2D.cpp  basis_functions.h  basis_polynomials.cpp  basis_triangle_dubiner.cpp
source/communication/: db_data_exchanger.hpp  hpx_communicator.cpp  hpx_communicator.hpp  mpi_communicator.cpp  mpi_communicator.hpp  ompi_communicator.cpp  ompi_communicator.hpp
source/elements/: class_element.cpp  class_element.h  class_element_2D.cpp  class_element_2D.h  class_element_tri.cpp  class_element_tri.h
source/geometry/: boundary.hpp  boundary_container.hpp  edge_boundary.hpp  edge_interface.hpp  edge_internal.hpp  element.hpp  element_container.hpp  element_soa.hpp  interface.hpp  interface_container.hpp  interface_soa.hpp  mesh.hpp  mesh_definitions.hpp  mesh_skeleton.hpp  mesh_skeleton_definitions.hpp  mesh_utilities.hpp  raw_boundary.hpp
source/hpx/: hpx_mesh.hpp  hpx_mesh_component.hpp
source/integration/: integrations_1D.hpp  integrations_2D.hpp
source/integration_rules/: integration_area_dunavant.cpp  integration_dunavant_2D.cpp  integration_gausslegendre_1D.cpp  integration_line_gausslegendre.cpp  integration_rules_1D.h  integration_rules_2D.h  integration_rules_area.h  integration_rules_line.h
source/interfaces/: class_interface.h  class_interface_2D.cpp  class_interface_2D.h
source/master/: master_elements_2D.hpp
source/mesh/: read_adcirc_mesh.cpp  shape_factory.h
source/problem/: definitions.hpp  (+9 more)
test/: CMakeLists.txt  sample_fort.14.out  test_adcirc_format.cpp  test_at_each.cpp  test_basis_dubiner_2d.cpp  test_basis_legendre_1d.cpp  test_basis_legendre_2d.cpp  test_blaze_serialization.cpp  test_boundary_interface.cpp  test_dmatrix.cpp  test_dubiner.cpp  test_edges.cpp  test_eigen_serialization.cpp  test_element_serialization.cpp  test_element_triangle.cpp  test_element_triangle.hpp  test_global_jacobian_ihdg.cpp  test_heartbeat.cpp  test_heterogeneous_containers.cpp  test_heterogeneous_vector.cpp  test_input_parameters.cpp  test_integ_dunavant_2d.cpp  test_integ_gausslegendre_1d.cpp  test_integ_gausslegendre_2d.cpp  test_is_defined.cpp  test_is_soa.cpp  test_is_vectorized.cpp  test_jacobians_ehdg.cpp  test_jacobians_ihdg.cpp  test_linear_algebra.cpp  test_linear_algebra_dyn.cpp  test_linear_algebra_stat.cpp  test_llf_flux.cpp  test_mesh_metadata.cpp  test_mesh_serialization.cpp  test_partition.cpp  test_quadrature_1d.cpp  test_quadrature_2d.cpp  test_rk_stepper.cpp  test_rk_stepper_serialization.cpp  (+11 more)
(+988 files in other folders)
